src/main/java/org/example/kompilatory/SQLParser.java
package org.example.kompilatory;// Generated from SQLParser.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	public static final int
			SCOL=1, DOT=2, OPEN_PAR=3, CLOSE_PAR=4, COMMA=5, STAR=6, PLUS=7, MINUS=8,
			TILDE=9, DIV=10, MOD=11, AMP=12, PIPE=13, LT=14, LT_EQ=15, GT=16, GT_EQ=17,
			EQ=18, NOT_EQ1=19, NOT_EQ2=20, ALL_=21, AND_=22, ANY_=23, AS_=24, ASC_=25,
			BETWEEN_=26, CAST_=27, CROSS_=28, DESC_=29, DISTINCT_=30, ESCAPE_=31,
			EXCEPT_=32, EXISTS_=33, FROM_=34, GROUP_BY=35, HAVING_=36, IN_=37, INNER_=38,
			INTERSECT_=39, IS_=40, ISNULL_=41, JOIN_=42, LEFT_=43, LIKE_=44, LIMIT_=45,
			NATURAL_=46, NOT_=47, NOT_NULL=48, NULL_=49, OFFSET_=50, ON_=51, OR_=52,
			ORDER_BY=53, OUTER_=54, SELECT_=55, UNION_=56, USING_=57, WHERE_=58, TRUE_=59,
			FALSE_=60, NULLS_=61, FIRST_=62, LAST_=63, FILTER_=64, IDENTIFIER=65,
			NUMERIC_LITERAL=66, STRING_LITERAL=67, SPACES=68;
	public static final int
			RULE_parse = 0, RULE_sql_stmt_list = 1, RULE_type_name = 2, RULE_expr = 3,
			RULE_select_stmt = 4, RULE_join_clause = 5, RULE_select_core = 6, RULE_simple_select_stmt = 7,
			RULE_compound_select_stmt = 8, RULE_table_or_subquery = 9, RULE_result_column = 10,
			RULE_join_operator = 11, RULE_join_constraint = 12, RULE_compound_operator = 13,
			RULE_column_name_list = 14, RULE_filter_clause = 15, RULE_aggregate_function_invocation = 16,
			RULE_order_by_stmt = 17, RULE_limit_stmt = 18, RULE_ordering_term = 19,
			RULE_asc_desc = 20, RULE_offset = 21, RULE_unary_operator = 22, RULE_column_alias = 23,
			RULE_name = 24, RULE_function_name = 25, RULE_schema_name = 26, RULE_table_name = 27,
			RULE_column_name = 28, RULE_table_alias = 29, RULE_alias = 30, RULE_aggregate_func = 31,
			RULE_table_function_name = 32, RULE_literal_value = 33, RULE_signed_number = 34,
			RULE_any_name = 35, RULE_keyword = 36;
	private static String[] makeRuleNames() {
		return new String[] {
				"parse", "sql_stmt_list", "type_name", "expr", "select_stmt", "join_clause",
				"select_core", "simple_select_stmt", "compound_select_stmt", "table_or_subquery",
				"result_column", "join_operator", "join_constraint", "compound_operator",
				"column_name_list", "filter_clause", "aggregate_function_invocation",
				"order_by_stmt", "limit_stmt", "ordering_term", "asc_desc", "offset",
				"unary_operator", "column_alias", "name", "function_name", "schema_name",
				"table_name", "column_name", "table_alias", "alias", "aggregate_func",
				"table_function_name", "literal_value", "signed_number", "any_name",
				"keyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
				null, "';'", "'.'", "'('", "')'", "','", "'*'", "'+'", "'-'", "'~'",
				"'/'", "'%'", "'&'", "'|'", "'<'", "'<='", "'>'", "'>='", "'='", "'!='",
				"'<>'", "'ALL'", "'AND'", "'ANY'", "'AS'", "'ASC'", "'BETWEEN'", "'CAST'",
				"'CROSS'", "'DESC'", "'DISTINCT'", "'ESCAPE'", "'EXCEPT'", "'EXISTS'",
				"'FROM'", "'GROUP BY'", "'HAVING'", "'IN'", "'INNER'", "'INTERSECT'",
				"'IS'", "'ISNULL'", "'JOIN'", "'LEFT'", "'LIKE'", "'LIMIT'", "'NATURAL'",
				"'NOT'", "'NOT NULL'", "'NULL'", "'OFFSET'", "'ON'", "'OR'", "'ORDER BY'",
				"'OUTER'", "'SELECT'", "'UNION'", "'USING'", "'WHERE'", "'TRUE'", "'FALSE'",
				"'NULLS'", "'FIRST'", "'LAST'", "'FILTER'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
				null, "SCOL", "DOT", "OPEN_PAR", "CLOSE_PAR", "COMMA", "STAR", "PLUS",
				"MINUS", "TILDE", "DIV", "MOD", "AMP", "PIPE", "LT", "LT_EQ", "GT", "GT_EQ",
				"EQ", "NOT_EQ1", "NOT_EQ2", "ALL_", "AND_", "ANY_", "AS_", "ASC_", "BETWEEN_",
				"CAST_", "CROSS_", "DESC_", "DISTINCT_", "ESCAPE_", "EXCEPT_", "EXISTS_",
				"FROM_", "GROUP_BY", "HAVING_", "IN_", "INNER_", "INTERSECT_", "IS_",
				"ISNULL_", "JOIN_", "LEFT_", "LIKE_", "LIMIT_", "NATURAL_", "NOT_", "NOT_NULL",
				"NULL_", "OFFSET_", "ON_", "OR_", "ORDER_BY", "OUTER_", "SELECT_", "UNION_",
				"USING_", "WHERE_", "TRUE_", "FALSE_", "NULLS_", "FIRST_", "LAST_", "FILTER_",
				"IDENTIFIER", "NUMERIC_LITERAL", "STRING_LITERAL", "SPACES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SQLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SQLParser.EOF, 0); }
		public List<Sql_stmt_listContext> sql_stmt_list() {
			return getRuleContexts(Sql_stmt_listContext.class);
		}
		public Sql_stmt_listContext sql_stmt_list(int i) {
			return getRuleContext(Sql_stmt_listContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLParserListener ) ((SQLParserListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLParserListener ) ((SQLParserListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLParserVisitor ) return ((SQLParserVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SCOL || _la==SELECT_) {
					{
						{
							setState(74);
							sql_stmt_list();
						}
					}
					setState(79);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(80);
				match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Sql_stmt_listContext extends ParserRuleContext {
		public List<Select_stmtContext> select_stmt() {
			return getRuleContexts(Select_stmtContext.class);
		}
		public Select_stmtContext select_stmt(int i) {
			return getRuleContext(Select_stmtContext.class,i);
		}
		public List<TerminalNode> SCOL() { return getTokens(SQLParser.SCOL); }
		public TerminalNode SCOL(int i) {
			return getToken(SQLParser.SCOL, i);
		}
		public Sql_stmt_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_stmt_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLParserListener ) ((SQLParserListener)listener).enterSql_stmt_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLParserListener ) ((SQLParserListener)listener).exitSql_stmt_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLParserVisitor ) return ((SQLParserVisitor<? extends T>)visitor).visitSql_stmt_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sql_stmt_listContext sql_stmt_list() throws RecognitionException {
		Sql_stmt_listContext _localctx = new Sql_stmt_listContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sql_stmt_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SCOL) {
					{
						{
							setState(82);
							match(SCOL);
						}
					}
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(88);
				select_stmt();
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
							{
								setState(90);
								_errHandler.sync(this);
								_la = _input.LA(1);
								do {
									{
										{
											setState(89);
											match(SCOL);
										}
									}
									setState(92);
									_errHandler.sync(this);
									_la = _input.LA(1);
								} while ( _la==SCOL );
								setState(94);
								select_stmt();
							}
						}
					}
					setState(99);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				setState(103);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
							{
								setState(100);
								match(SCOL);
							}
						}
					}
					setState(105);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_nameContext extends ParserRuleContext {
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public TerminalNode OPEN_PAR() { return getToken(SQLParser.OPEN_PAR, 0); }
		public List<Signed_numberContext> signed_number() {
			return getRuleContexts(Signed_numberContext.class);
		}
		public Signed_numberContext signed_number(int i) {
			return getRuleContext(Signed_numberContext.class,i);
		}
		public TerminalNode CLOSE_PAR() { return getToken(SQLParser.CLOSE_PAR, 0); }
		public TerminalNode COMMA() { return getToken(SQLParser.COMMA, 0); }
		public Type_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLParserListener ) ((SQLParserListener)listener).enterType_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLParserListener ) ((SQLParserListener)listener).exitType_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLParserVisitor ) return ((SQLParserVisitor<? extends T>)visitor).visitType_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_nameContext type_name() throws RecognitionException {
		Type_nameContext _localctx = new Type_nameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type_name);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(107);
				_errHandler.sync(this);
				_alt = 1+1;
				do {
					switch (_alt) {
						case 1+1:
						{
							{
								setState(106);
								name();
							}
						}
						break;
						default:
							throw new NoViableAltException(this);
					}
					setState(109);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				} while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(121);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
					{
						setState(111);
						match(OPEN_PAR);
						setState(112);
						signed_number();
						setState(113);
						match(CLOSE_PAR);
					}
					break;
					case 2:
					{
						setState(115);
						match(OPEN_PAR);
						setState(116);
						signed_number();
						setState(117);
						match(COMMA);
						setState(118);
						signed_number();
						setState(119);
						match(CLOSE_PAR);
					}
					break;
				}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public Literal_valueContext literal_value() {
			return getRuleContext(Literal_valueContext.class,0);
		}
		public Column_nameContext column_name() {
			return getRuleContext(Column_nameContext.class,0);
		}
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public List<TerminalNode> DOT() { return getTokens(SQLParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(SQLParser.DOT, i);
		}
		public Schema_nameContext schema_name() {
			return getRuleContext(Schema_nameContext.class,0);
		}
		public Unary_operatorContext unary_operator() {
			return getRuleContext(Unary_operatorContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Function_nameContext function_name() {
			return getRuleContext(Function_nameContext.class,0);
		}
		public TerminalNode OPEN_PAR() { return getToken(SQLParser.OPEN_PAR, 0); }
		public TerminalNode CLOSE_PAR() { return getToken(SQLParser.CLOSE_PAR, 0); }
		public TerminalNode STAR() { return getToken(SQLParser.STAR, 0); }
		public Filter_clauseContext filter_clause() {
			return getRuleContext(Filter_clauseContext.class,0);
		}
		public TerminalNode DISTINCT_() { return getToken(SQLParser.DISTINCT_, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SQLParser.COMMA, i);
		}
		public TerminalNode CAST_() { return getToken(SQLParser.CAST_, 0); }
		public TerminalNode AS_() { return getToken(SQLParser.AS_, 0); }
		public Type_nameContext type_name() {
			return getRuleContext(Type_nameContext.class,0);
		}
		public Select_stmtContext select_stmt() {
			return getRuleContext(Select_stmtContext.class,0);
		}
		public TerminalNode EXISTS_() { return getToken(SQLParser.EXISTS_, 0); }
		public TerminalNode NOT_() { return getToken(SQLParser.NOT_, 0); }
		public TerminalNode DIV() { return getToken(SQLParser.DIV, 0); }
		public TerminalNode MOD() { return getToken(SQLParser.MOD, 0); }
		public TerminalNode PLUS() { return getToken(SQLParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(SQLParser.MINUS, 0); }
		public TerminalNode AMP() { return getToken(SQLParser.AMP, 0); }
		public TerminalNode PIPE() { return getToken(SQLParser.PIPE, 0); }
		public TerminalNode LT() { return getToken(SQLParser.LT, 0); }
		public TerminalNode LT_EQ() { return getToken(SQLParser.LT_EQ, 0); }
		public TerminalNode GT() { return getToken(SQLParser.GT, 0); }
		public TerminalNode GT_EQ() { return getToken(SQLParser.GT_EQ, 0); }
		public TerminalNode EQ() { return getToken(SQLParser.EQ, 0); }
		public TerminalNode NOT_EQ1() { return getToken(SQLParser.NOT_EQ1, 0); }
		public TerminalNode NOT_EQ2() { return getToken(SQLParser.NOT_EQ2, 0); }
		public TerminalNode IS_() { return getToken(SQLParser.IS_, 0); }
		public TerminalNode IN_() { return getToken(SQLParser.IN_, 0); }
		public TerminalNode LIKE_() { return getToken(SQLParser.LIKE_, 0); }
		public TerminalNode AND_() { return getToken(SQLParser.AND_, 0); }
		public TerminalNode OR_() { return getToken(SQLParser.OR_, 0); }
		public TerminalNode BETWEEN_() { return getToken(SQLParser.BETWEEN_, 0); }
		public TerminalNode ESCAPE_() { return getToken(SQLParser.ESCAPE_, 0); }
		public TerminalNode ISNULL_() { return getToken(SQLParser.ISNULL_, 0); }
		public TerminalNode NOT_NULL() { return getToken(SQLParser.NOT_NULL, 0); }
		public TerminalNode NULL_() { return getToken(SQLParser.NULL_, 0); }
		public Table_function_nameContext table_function_name() {
			return getRuleContext(Table_function_nameContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLParserListener ) ((SQLParserListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLParserListener ) ((SQLParserListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLParserVisitor ) return ((SQLParserVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(187);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
					case 1:
					{
						setState(124);
						literal_value();
					}
					break;
					case 2:
					{
						setState(133);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
							case 1:
							{
								setState(128);
								_errHandler.sync(this);
								switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
									case 1:
									{
										setState(125);
										schema_name();
										setState(126);
										match(DOT);
									}
									break;
								}
								setState(130);
								table_name();
								setState(131);
								match(DOT);
							}
							break;
						}
						setState(135);
						column_name();
					}
					break;
					case 3:
					{
						setState(136);
						unary_operator();
						setState(137);
						expr(17);
					}
					break;
					case 4:
					{
						setState(139);
						function_name();
						setState(140);
						match(OPEN_PAR);
						setState(153);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
							case OPEN_PAR:
							case PLUS:
							case MINUS:
							case TILDE:
							case ALL_:
							case AND_:
							case ANY_:
							case AS_:
							case ASC_:
							case BETWEEN_:
							case CAST_:
							case CROSS_:
							case DESC_:
							case DISTINCT_:
							case ESCAPE_:
							case EXCEPT_:
							case EXISTS_:
							case FROM_:
							case GROUP_BY:
							case HAVING_:
							case IN_:
							case INNER_:
							case INTERSECT_:
							case IS_:
							case ISNULL_:
							case JOIN_:
							case LEFT_:
							case LIKE_:
							case LIMIT_:
							case NATURAL_:
							case NOT_:
							case NOT_NULL:
							case NULL_:
							case OFFSET_:
							case ON_:
							case OR_:
							case ORDER_BY:
							case OUTER_:
							case SELECT_:
							case UNION_:
							case USING_:
							case WHERE_:
							case TRUE_:
							case FALSE_:
							case NULLS_:
							case FIRST_:
							case LAST_:
							case FILTER_:
							case IDENTIFIER:
							case NUMERIC_LITERAL:
							case STRING_LITERAL:
							{
								{
									setState(142);
									_errHandler.sync(this);
									switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
										case 1:
										{
											setState(141);
											match(DISTINCT_);
										}
										break;
									}
									setState(144);
									expr(0);
									setState(149);
									_errHandler.sync(this);
									_la = _input.LA(1);
									while (_la==COMMA) {
										{
											{
												setState(145);
												match(COMMA);
												setState(146);
												expr(0);
											}
										}
										setState(151);
										_errHandler.sync(this);
										_la = _input.LA(1);
									}
								}
							}
							break;
							case STAR:
							{
								setState(152);
								match(STAR);
							}
							break;
							case CLOSE_PAR:
								break;
							default:
								break;
						}
						setState(155);
						match(CLOSE_PAR);
						setState(157);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
							case 1:
							{
								setState(156);
								filter_clause();
							}
							break;
						}
					}
					break;
					case 5:
					{
						setState(159);
						match(OPEN_PAR);
						setState(160);
						expr(0);
						setState(165);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==COMMA) {
							{
								{
									setState(161);
									match(COMMA);
									setState(162);
									expr(0);
								}
							}
							setState(167);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(168);
						match(CLOSE_PAR);
					}
					break;
					case 6:
					{
						setState(170);
						match(CAST_);
						setState(171);
						match(OPEN_PAR);
						setState(172);
						expr(0);
						setState(173);
						match(AS_);
						setState(174);
						type_name();
						setState(175);
						match(CLOSE_PAR);
					}
					break;
					case 7:
					{
						setState(181);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==EXISTS_ || _la==NOT_) {
							{
								setState(178);
								_errHandler.sync(this);
								_la = _input.LA(1);
								if (_la==NOT_) {
									{
										setState(177);
										match(NOT_);
									}
								}

								setState(180);
								match(EXISTS_);
							}
						}
